# Healthcare-Appointment-System

./: CMakeLists.txt  ReadMe.md
diagrams/: Reg&Log.puml  admin.puml  class.puml  patient.puml  usecase.puml
src/: .clang-format  CMakeLists.txt  main.cpp
src/database/: db.cpp  db.h  db_manager.cpp  db_manager.h
src/model/profile/: admin_profile.cpp  admin_profile.h  doctor_profile.cpp  doctor_profile.h  patient_profile.cpp  patient_profile.h  profile.cpp  profile.h
src/model/time/: appointment.cpp  appointment.h  medical_history.cpp  medical_history.h  medical_record.cpp  medical_record.h  schedule.cpp  schedule.h
src/model/user/: admin.cpp  admin.h  doctor.cpp  doctor.h  patient.cpp  patient.h  user.cpp  user.h
src/security/: authenticator.cpp  authenticator.h
src/service/: admin_service.cpp  admin_service.h  doctor_service.cpp  doctor_service.h  patient_service.cpp  patient_service.h  user_service.cpp  user_service.h
src/view/: ui_manager.cpp  ui_manager.h
